--- a/wfontlist.rc
+++ b/wfontlist.rc
@@ -11,6 +11,18 @@
 //    you cannot attach tooltips to the control.
 //
 //****************************************************************************
+//*********************************************************************************************
+// 04/26/13 12:45  On Win7, WS_DLGFRAME and WS_CAPTION seem to create identical dialogs !
+// > WS_DLGFRAME  Creates a window with a double border but no title.
+// > WS_BORDER    Creates a window that has a border.
+// > WS_CAPTION   Creates a window that has a title bar (implies the WS_BORDER style). 
+//                Cannot be used with the WS_DLGFRAME style.
+// > WS_SYSMENU   Among other things, adds the CLOSE button on title bar
+//                WS_SYSMENU also needed in order to show program icon on title bar
+//*********************************************************************************************
+//  WS_THICKFRAME   Creates a window with a thick frame that can be used to size the window.
+//  04/26/13 - initially, one of these other flags was over-riding WS_THICKFRAME
+//*********************************************************************************************
 #include <windows.h>
 
 #include "resource.h"
@@ -22,8 +34,11 @@ IDI_APPICON   ICON      "fonts2.ico"
 #define	 SAMPLE_DX	(MAIN_DX - LABEL_DX - 10)
 
 IDD_MAIN_DIALOG DIALOGEX 200, 50, MAIN_DX, 400
-STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX
+// STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX
+// EXSTYLE WS_EX_APPWINDOW
+STYLE DS_MODALFRAME | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME | WS_MINIMIZEBOX
 EXSTYLE WS_EX_APPWINDOW
+// EXSTYLE WS_EX_CONTROLPARENT
 CAPTION "wFontList"
 FONT 10, "Times New Roman"
 // FONT 12, "MS Sans Serif"
@@ -31,7 +46,7 @@ BEGIN
    //  Note: SS_NOTIFY allows a static control to generate tooltip messages
    DEFPUSHBUTTON  "Show Fonts", IDB_SHOW_FONTS, 10,  2,        80, 10,WS_TABSTOP
 
-   LTEXT          "Sample:",  	IDC_STATIC,      4, 16,  LABEL_DX, 10,SS_NOTIFY
+   LTEXT          "Sample:",    IDC_STATIC,      4, 16,  LABEL_DX, 10,SS_NOTIFY
    LTEXT          "",           IDC_WORDS,      30, 14, SAMPLE_DX, 12,SS_SUNKEN
 END
 
